[package]
name = "warcificator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
http = "0.2.11"
reqwest = { version = "0.11.23", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
] }
tokio = { version = "1.35.1", features = ["full"] }
warc = "0.3.1"
